--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -30,7 +30,7 @@
     "workbench.iconTheme": "material-icon-theme",
     //Terminal
     "terminal.integrated.fontFamily": "'Inconsolata-dz for Powerline', 'IPA Pゴシック'",
-    "terminal.integrated.shell.windows": "wsl",
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\wsl.exe",
     "terminal.integrated.shell.osx": "zsh",
     //Explorer
     "explorer.confirmDragAndDrop": false,
